--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 service-base-url=https://terranout.mine.nu:8585/download/
 #debug=true
+server.port=${port:8484}
